Add title logic, fix index page, convert some getting started pages to Markdown.

--- a/source/releases/3.html.md
+++ b/source/releases/3.html.md
@@ -1,7 +1,7 @@
 ---
 title: Lita 3.0
-subtitle: Release announcement
-category: releases
+section: Release announcement
+menu: releases
 ---
 
 Lita 3.0 was released on February 26, 2014. It contains several new features and improvements for both users and plugin developers.
