--- a/source/releases/4.html.md
+++ b/source/releases/4.html.md
@@ -1,7 +1,7 @@
 ---
 title: Lita 4.0
-subtitle: Release announcement
-category: releases
+section: Release announcement
+menu: releases
 ---
 
 Version 4.0 of Lita, the Ruby chat bot framework, has been released. It contains several new features and improvements for both users and plugin developers. If you're brand new to Lita, you can install it by running `gem install lita` and learn to use it on the [getting started](/getting-started/) page. Otherwise, read on for all the changes in the latest version.
