Update Lita 4 release page to Kramdown syntax.

--- a/source/releases/4.html.md
+++ b/source/releases/4.html.md
@@ -6,7 +6,7 @@ menu: releases
 
 Version 4.0 of Lita, the Ruby chat bot framework, has been released. It contains several new features and improvements for both users and plugin developers. If you're brand new to Lita, you can install it by running `gem install lita` and learn to use it on the [getting started](/getting-started/) page. Otherwise, read on for all the changes in the latest version.
 
-<h3 id="feature-overview">Feature overview</h3>
+### Feature overview {#feature-overview}
 
 * New configuration system with support for data type validation, custom validations, and nested attributes.
 * Rack middleware can now be added to the built-in web server.
@@ -23,7 +23,7 @@ Version 4.0 of Lita, the Ruby chat bot framework, has been released. It contains
 
 The guides on the documentation site have also been greatly improved.
 
-<h3 id="upgrading-for-users">Upgrading for Lita users</h3>
+### Upgrading for Lita users {#upgrading-for-users}
 
 Lita 4 is completely backwards compatible for users. All existing functionality and plugins will continue to work. However, Lita 4 introduces a new configuration system, and a few things will need to change in your `lita_config.rb` file as the plugins you use begin to take advantage of features from Lita 4. Most configuration will remain unchanged, but a couple of attributes will emit deprecation warnings until they are updated to be compatible with the new style. These attributes are:
 
@@ -41,7 +41,7 @@ Lita 4 is completely backwards compatible for users. All existing functionality 
 
 In addition to these configuration changes, Lita's built-in daemonization feature has been deprecated without replacement. Instead, daemonization of your Lita process should be done using dedicated process management tools for your operating system. Popular choices are [systemd](http://www.freedesktop.org/wiki/Software/systemd/), [Upstart](http://upstart.ubuntu.com/), and <a href="http://smarden.org/runit/">runit</a>. Lita's built-in daemonization will be removed completely in Lita 5. For more detail on the reasons behind this change, Mike Perham's [Don't Daemonize Your Daemons!](http://www.mikeperham.com/2014/09/22/dont-daemonize-your-daemons/) is good reading.
 
-<h3 id="upgrading-for-developers">Upgrading for plugin developers</h3>
+### Upgrading for plugin developers {#upgrading-for-developers}
 
 In accordance with Lita's [versioning policy](/getting-started/versioning-policy), Lita 4's only breaking change is the removal of one API that was already deprecated in Lita 3:
 
@@ -75,19 +75,19 @@ The following APIs are now deprecated:
 
     Before:
 
-    ``` ruby
+    ~~~ ruby
     def self.default_config(config)
       config.use_special_mode = false
       config.custom_value = nil
     end
-    ```
+    ~~~
 
     After:
 
-    ``` ruby
+    ~~~ ruby
     config :use_special_mode, default: false
     config :custom_value
-    ```
+    ~~~
 
     In either case, the handler's configuration can be accessed at runtime with `Lita::Handler#config`. If both types of configuration declarations are present, the old style will take precedence, for backwards compatibility.
 
@@ -105,7 +105,7 @@ The following APIs are now deprecated:
 
     Lita 4's RSpec routing matchers use a new syntax that is more akin to RSpec style. Rather than enumerate each possible usage here, the following code block will demonstrate a few examples:
 
-    ``` ruby
+    ~~~ ruby
     ### Lita 3
 
     # passes but doesn't actually test anything
@@ -130,17 +130,17 @@ The following APIs are now deprecated:
 
     # negating the expectation doesn't change the name of the matcher
     it { is_expected.not_to route("foo").to(:bar) }
-    ```
+    ~~~
 
     As you can see from the example above, the new matchers don't give a false positive when the name of the route is not supplied. Lita 3's routing matchers also ignored the authorization system, while Lita 4's do not. In order to test a route that requires authorization, use the `with_authorization_for` fluent interface. The routing syntax for testing HTTP routes and event handlers follows a similar style to the chat routes. When you run your test suite, the deprecation warnings will tell you exactly what the new syntax is whenever the old syntax is encountered. The old syntax will be removed in Lita 5.
 
 Lastly, Lita 4 includes some internal API changes that don't cause runtime functionality to break, but may cause tests written against Lita 3 to fail if they were directly using or stubbing some of these old APIs. To make the transition smooth, Lita 4 has a special mode called "version 3 compatibility mode" that activates the old code paths while the test suite is running. Compatibility mode is turned on by default. When you're ready to upgrade your test suite, turn it off by adding the following code to `spec/spec_helper.rb`:
 
-``` ruby
+~~~ ruby
 require "lita/rspec"
 
 Lita.version_3_compatibility_mode = false
-```
+~~~
 
 This may cause some tests to begin failing that pass with compatibility mode on. The cause of each failure will be one of the following:
 
