Update README and various non-secure links.

--- a/source/docs/releases/4.html.md
+++ b/source/docs/releases/4.html.md
@@ -39,7 +39,7 @@ Lita 4 is completely backwards compatible for users. All existing functionality 
 
     Example: `config.redis.host = "redis.example.com"` will become `config.redis[:host] = "redis.example.com"`
 
-In addition to these configuration changes, Lita's built-in daemonization feature has been deprecated without replacement. Instead, daemonization of your Lita process should be done using dedicated process management tools for your operating system. Popular choices are [systemd](http://www.freedesktop.org/wiki/Software/systemd/), [Upstart](http://upstart.ubuntu.com/), and <a href="http://smarden.org/runit/">runit</a>. Lita's built-in daemonization will be removed completely in Lita 5. For more detail on the reasons behind this change, Mike Perham's [Don't Daemonize Your Daemons!](http://www.mikeperham.com/2014/09/22/dont-daemonize-your-daemons/) is good reading.
+In addition to these configuration changes, Lita's built-in daemonization feature has been deprecated without replacement. Instead, daemonization of your Lita process should be done using dedicated process management tools for your operating system. Popular choices are [systemd](https://www.freedesktop.org/wiki/Software/systemd/), [Upstart](http://upstart.ubuntu.com/), and [runit](http://smarden.org/runit/). Lita's built-in daemonization will be removed completely in Lita 5. For more detail on the reasons behind this change, Mike Perham's [Don't Daemonize Your Daemons!](http://www.mikeperham.com/2014/09/22/dont-daemonize-your-daemons/) is good reading.
 
 ### Upgrading for plugin developers {#upgrading-for-developers}
 
