--- a/source/docs/releases/3.html.md
+++ b/source/docs/releases/3.html.md
@@ -18,7 +18,7 @@ Lita 3.0 was released on February 26, 2014. It contains several new features and
 
 <div class="alert alert-warning">
   <strong>Note:</strong>
-  Older plugins may be locked to a 2.x version of Lita in their gemspec file. These plugins will need to have their version requirement changed to use "&lt;=" instead of "~&gt;" to be installable with Lita 3.0.
+  Older plugins may be locked to a 2.x version of Lita in their gemspec file. These plugins will need to have their version requirement changed to use "&gt;=" instead of "~&gt;" to be installable with Lita 3.0.
 </div>
 
 There are three changes which are not backwards-compatible, which plugin authors should be aware of:
